# neogen

./: Cargo.toml  build.rs  run.powershell  websocket_architecture_refactor.md
backend/: database.db  main.rs  schema.rs
backend/models/: mod.rs  room.rs  user.rs
backend/models/rooms/: generated.rs
backend/models/todo/: generated.rs
backend/services/: create_room.rs  get_rooms.rs  mod.rs  user.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/bundles/: index.tsx
frontend/certs/: full_chain.pem  privkey.pem
frontend/src/: App.tsx  dev.tsx
frontend/src/components/: AuthForms.tsx  AuthGuard.tsx  CreateRoomForm.tsx  ForceStartButton.tsx  GlobalChat.tsx  GlobalChatWrapper.tsx  GroupSelector.tsx  LoginForm.tsx  MainButtons.tsx  MultiChat.tsx  MultiChatFixed.tsx  MultiChatV2.tsx  PasswordPrompt.tsx  PlayerPowerRanking.tsx  RegisterForm.tsx  RoomCard.tsx  RoomGrid.tsx
frontend/src/config/: api.ts
frontend/src/containers/: GamePage.tsx  GamePage_backup.tsx  Home.tsx  Room.tsx  RoomPage.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: checkLoginStatus.ts  useAuthenticatedWebSocket.ts  websocket.ts  wsManager.ts
frontend/src/services/: toast.ts
frontend/src/types/: rust.d.ts
frontend/src/utils/: usernameValidator.ts
migrations/2025-08-25-114944_create_users/: up.sql
migrations/2025-08-26-015319_add_unique_username/: down.sql  up.sql
migrations/2025-08-27-083638_add_password_and_public_to_rooms/: up.sql
