[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "neogen"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.6"
actix-multipart = "0.6.0"
actix-web = "4.5"
futures-util = "0.3.30"
create-rust-app = {version="11.0.1", default-features = false, features=["plugin_dev", "database_sqlite", "backend_actix-web"]}
serde_json = "1"
simple_logger = "5.0"
tsync = "3"
actix = "0.13.5"
actix-web-actors = "4.3.1"
rand = "0.9.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"

[dependencies.diesel]
default-features = false
features = ["sqlite", "r2d2", "chrono"]
version = "2.1"

[dependencies.dsync]
features = ["advanced-queries"]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
default-run = "neogen"
edition = "2024"
name = "neogen"
publish = false
version = "0.1.0"

# 开发模式优化
[profile.dev]
debug-assertions = true
opt-level = 1        # 轻度优化，平衡编译速度和运行速度
debug = true         # 保留调试信息
incremental = true   # 增量编译

# 依赖项优化编译
[profile.dev.package."*"]
opt-level = 2        # 对依赖项进行优化

# 并行编译
[build]
jobs = 4            # 根据您的CPU核心数调整